--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.8"
     },
     "dependencies": {
-        "vuelidate": "^0.7.4"
+        "vuelidate": "^0.7.4",
+        "vuex": "^3.1.0"
     }
 }
